Added responsiveness. Send button display result on console.

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                     </div> 
                     <div class="testdrive-form">
                         <form class="testdrive-form-inner">
-                            <input placeholder="nome" type="text "name="name"/>
-                            <input placeholder="telefone" type="number" name="tel"/>
+                            <input class="form-name" placeholder="nome" type="text "name="name"/>
+                            <input class="form-tel" placeholder="telefone" type="text" name="tel"/>
                             <select class="local-list" type="select" name="local">
                                 <option>Localidade</option>
                             </select>
-                            <input placeholder="email" type="email" name="email"/>
+                            <input class="form-mail" placeholder="email" type="email" name="email"/>
                             <select class="concessionario-list" type="select" name="concessionario">
                                 <option>Concessionário</option>
                             </select>
@@ -58,9 +58,6 @@
                                 
                         </form>
                      </div>
-                        <!-- <div class="testdrive-disclamers">
-                        
-                        <div>-->
 
                 </div>
                 <div class="legal">
